src/test/ui/svh/changing-crates.stderr
error[E0460]: found possibly newer version of crate `a` which `b` depends on
  --> $DIR/changing-crates.rs:8:1
   |
LL | extern crate b;
   | ^^^^^^^^^^^^^^^
   |
   = note: perhaps that crate needs to be recompiled?
   = note: the following crate versions were found:
           crate `a`: $PATH_a
           crate `b`: $PATH_b

error: aborting due to previous error

